[project]
name = "pytorch-optimem"
version = "0.0.1"
authors = [
  { name="Jimmy Li", email="jimmyli2002@gmail.com" }, { name="Mehul Raheja", email="mraheja@berkeley.edu" },
]
description = "Optimem is a library to reduce the GPU memory footprint of PyTorch models"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "torch",
]

[project.urls]
"Homepage" = "https://github.com/callaunchpad/pytorch-optimem"
"Bug Tracker" = "https://github.com/callaunchpad/pytorch-optimem/issues"